header dropdown items in mobile not visible issue resolved

--- a/MvcFramework/V2/css/style-header.css
+++ b/MvcFramework/V2/css/style-header.css
@@ -66,6 +66,8 @@ header .navbar .dropdown:hover .dropdown-menu{
 	transform: scale(1,1);
 	opacity: 1;
 }
+/* 02-01-24 css changes Tosif is below */
+body header .navbar .dropdown:hover .dropdown-menu { opacity: 1; display: block; }
 
 header .navbar .dropdown .dropdown-toggle::after{
 	content: url('https://mediacdn.brainmeasures.com/images/Pages/Global/icons/dropdown-toggle-white.png');
