--- a/MvcFramework/css/responsive.css
+++ b/MvcFramework/css/responsive.css
@@ -272,7 +272,7 @@ padding: 10px 10px;}
 
 /* Additional Media Quirry */
 @media only screen and (max-width: 479px){
- 
+    .backbanner { min-height: unset; } 
 }
  
 /* Large Mobile :480px. */
